--- a/Coffee2Project/Coffee2/src/main/res/layout/softwerkcoffee.xml
+++ b/Coffee2Project/Coffee2/src/main/res/layout/softwerkcoffee.xml
@@ -31,20 +31,31 @@
 
     </FrameLayout>
 
-    <Switch
-        android:id="@+id/coffeeSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
 
+    <Button
+    android:id="@+id/testButton"
+    style="?android:attr/buttonStyleSmall"
+    android:text="See status"
+    android:padding="0dp"
+    android:maxHeight="0dp"
+    android:maxWidth="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <TextView
         android:id="@+id/statusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text=""
         android:textColor="#FF0000"
-        android:textSize="50sp"
+        android:textSize="20dp"
         android:layout_gravity="center"
         android:visibility="invisible"/>
+
+    <Switch
+        android:id="@+id/coffeeSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+
 
 </LinearLayout>
