LoginActivity changed in app
Made "credentials" a file without extension instead of textfile

--- a/CoffeeProject/Coffee/src/main/res/layout/activity_main.xml
+++ b/CoffeeProject/Coffee/src/main/res/layout/activity_main.xml
@@ -2,33 +2,69 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    tools:context=".MainActivity">
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
+
+<!--
+
+    <FrameLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="10dp"
-        android:id="@+id/progressBar"
-        android:gravity="center"/>
-    <!--
-    <Switch
+        android:layout_gravity="center">
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:progressDrawable="@drawable/coffeeprogress"
+            android:layout_marginTop="45sp"
+            android:layout_marginLeft="8sp"
+            android:layout_width="160sp"
+            android:layout_height="135sp"/>
+
+        <ImageView
+            android:src="@drawable/coffeepot00"
+            android:layout_width="200sp"
+            android:layout_height="200sp"/>
+
+    </FrameLayout>
+
+
+    <Button
+        android:id="@+id/testButton"
+        style="?android:attr/buttonStyleSmall"
+        android:text="See status"
+        android:padding="0dp"
+        android:maxHeight="0dp"
+        android:maxWidth="0dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+    <TextView
+        android:id="@+id/statusText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/switch1"
+        android:text=""
+        android:textColor="#FF0000"
+        android:textSize="20dp"
         android:layout_gravity="center"
-        android:gravity="center"/>-->
+        android:visibility="invisible"/>
+
+    <Switch
+        android:id="@+id/coffeeSwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center" />
+-->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/text"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/elapsed_time_string"
-        android:layout_gravity="center"
-        android:textSize="20sp"/>
+        android:id="@+id/text2"/>
 
 </LinearLayout>
