--- a/CoffeeProject/Coffee/src/main/res/layout/activity_main.xml
+++ b/CoffeeProject/Coffee/src/main/res/layout/activity_main.xml
@@ -7,14 +7,12 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity">
-
-
-<!--
+    tools:context=".SoftwerkCoffeee">
 
     <FrameLayout android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center">
+
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
@@ -31,16 +29,51 @@
 
     </FrameLayout>
 
-
-    <Button
-        android:id="@+id/testButton"
-        style="?android:attr/buttonStyleSmall"
-        android:text="See status"
-        android:padding="0dp"
-        android:maxHeight="0dp"
-        android:maxWidth="0dp"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="5dp">
+
+        <TextView
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:text="Coffeemachine: "
+            android:textSize="15dp"
+            android:layout_gravity="center"/>
+
+        <Switch
+            android:id="@+id/coffeeSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"/>
+
+    </LinearLayout>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:paddingTop="5dp">
+
+        <TextView
+            android:layout_width="115dp"
+            android:layout_height="wrap_content"
+            android:text="Coffeepowder: "
+            android:textSize="15dp"
+            android:layout_gravity="center"/>
+
+        <Switch
+            android:id="@+id/coffeepowderSwitch"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textOff="NO"
+            android:textOn="YES"/>
+    </LinearLayout>
+
     <TextView
         android:id="@+id/statusText"
         android:layout_width="wrap_content"
@@ -49,22 +82,7 @@
         android:textColor="#FF0000"
         android:textSize="20dp"
         android:layout_gravity="center"
-        android:visibility="invisible"/>
-
-    <Switch
-        android:id="@+id/coffeeSwitch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center" />
--->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/text2"/>
+        android:visibility="invisible"
+        android:paddingTop="10dp"/>
 
 </LinearLayout>
