--- a/CoffeeProject/Coffee/src/main/res/layout/activity_main.xml
+++ b/CoffeeProject/Coffee/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center">
 
-        <ProgressBar
+        <se.softwerk.coffee.VerticalProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:progressDrawable="@drawable/coffeeprogress"
@@ -84,5 +84,56 @@
         android:layout_gravity="center"
         android:visibility="invisible"
         android:paddingTop="10dp"/>
+    <LinearLayout
+        android:id="@+id/timeLeftLayout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/timeLefttext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time left: "
+            android:textColor="#000000"
+            android:textSize="20dp"
+            />
+        <TextView
+            android:id="@+id/timeLeftvalue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#FF0000"
+            android:textSize="20dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/timeElapsedLayout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+
+        android:visibility="invisible">
+        <TextView
+            android:id="@+id/timeElapsedtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time elapsed: "
+            android:textColor="#000000"
+            android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/timeElapsedvalue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#FF0000"
+            android:textSize="20dp"/>
+    </LinearLayout>
 
 </LinearLayout>
