--- a/CoffeeProject/Coffee/src/main/res/layout/activity_main.xml
+++ b/CoffeeProject/Coffee/src/main/res/layout/activity_main.xml
@@ -1,4 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -136,4 +140,5 @@
             android:textSize="20dp"/>
     </LinearLayout>
 
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
