Minor changes in the app and on the page

--- a/Coffee2Project/Coffee2/src/main/res/layout/softwerkcoffee.xml
+++ b/Coffee2Project/Coffee2/src/main/res/layout/softwerkcoffee.xml
@@ -1,4 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    >
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +19,7 @@
     <FrameLayout android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center">
-        <ProgressBar
+        <com.softwerk.coffee2.VerticalProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyleHorizontal"
             android:progressDrawable="@drawable/coffeeprogress"
@@ -69,6 +73,24 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center" />
      </LinearLayout>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Autoswitch: "
+                android:textSize="15dp"
+                android:layout_gravity="center"/>
+            <Switch
+                android:id="@+id/autoSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center" />
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/statusText"
@@ -77,7 +99,59 @@
             android:text=""
             android:textColor="#FF0000"
             android:textSize="20dp"
-            android:layout_gravity="center"
-            android:visibility="invisible"/>
+            android:layout_gravity="center"/>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/timeLeftLayout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="invisible">
+
+        <TextView
+            android:id="@+id/timeLefttext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time left: "
+            android:textColor="#000000"
+            android:textSize="20dp"
+            />
+        <TextView
+            android:id="@+id/timeLeftvalue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#FF0000"
+            android:textSize="20dp"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/timeElapsedLayout"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+
+        android:visibility="invisible">
+        <TextView
+            android:id="@+id/timeElapsedtext"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Time elapsed: "
+            android:textColor="#000000"
+            android:textSize="20dp"/>
+        <TextView
+            android:id="@+id/timeElapsedvalue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textColor="#FF0000"
+            android:textSize="20dp"/>
+    </LinearLayout>
+
+    </LinearLayout>
+</ScrollView>
