--- a/public/css/toggle-switch.css
+++ b/public/css/toggle-switch.css
@@ -383,6 +383,7 @@
     -moz-box-shadow: inset rgba(0, 0, 0, 0.1) 0 1px 0;
     box-shadow: inset rgba(0, 0, 0, 0.1) 0 1px 0;
   }
+
   .ios.switch .slide-button {
     background-color: #53d76a;
     border-radius: 25px;
@@ -400,6 +401,106 @@
     transition: all 0.3s ease-out;
   }
   .ios input:checked + label {
+    color: #3a3a3a;
+  }
+
+.iosdisabled.toggle {
+    color: lightgrey;
+  }
+   .iosdisabled.toggle.error {
+    background: #FF0000;
+    color: #FFFFFF;
+    border-radius: 30px;
+  }
+  .iosdisabled.toggle .slide-button {
+    left: 0;
+    width: 30px;
+    background-color: white;
+    border: 1px solid lightgrey;
+    border-radius: 100%;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+    -webkit-box-shadow: inset 0 -3px 3px rgba(0, 0, 0, 0.025), 0 1px 4px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: inset 0 -3px 3px rgba(0, 0, 0, 0.025), 0 1px 4px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 -3px 3px rgba(0, 0, 0, 0.025), 0 1px 4px rgba(0, 0, 0, 0.15), 0 4px 4px rgba(0, 0, 0, 0.1);
+  }
+  .iosdisabled.toggle > span span {
+    width: 100%;
+    left: 0;
+    opacity: 0;
+  }
+  .iosdisabled.toggle > span span:first-of-type {
+    opacity: 1;
+    padding-left: 30px;
+  }
+  .iosdisabled.toggle > span span:last-of-type {
+    padding-right: 30px;
+  }
+  .iosdisabled.toggle > span:before {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 100px;
+    top: 0;
+    background-color: grey;
+    border: 1px solid lightgrey;
+    border-radius: 30px;
+    -webkit-transition: all 0.5s ease-out;
+    -moz-transition: all 0.5s ease-out;
+    -o-transition: all 0.5s ease-out;
+    transition: all 0.5s ease-out;
+    -webkit-box-shadow: inset rgba(0, 0, 0, 0.1) 0 1px 0;
+    -moz-box-shadow: inset rgba(0, 0, 0, 0.1) 0 1px 0;
+    box-shadow: inset rgba(0, 0, 0, 0.1) 0 1px 0;
+  }
+  .iosdisabled.toggle input:checked ~ .slide-button {
+    left: 100%;
+    margin-left: -30px;
+  }
+  .iosdisabled.toggle input:checked ~ span:before {
+    border-color: #53d76a;
+    -webkit-box-shadow: inset 0 0 0 30px #53d76a;
+    -moz-box-shadow: inset 0 0 0 30px #53d76a;
+    box-shadow: inset 0 0 0 30px #53d76a;
+  }
+  .iosdisabled.toggle input:checked ~ span span:first-of-type {
+    opacity: 0;
+  }
+  .iosdisabled.toggle input:checked ~ span span:last-of-type {
+    opacity: 1;
+    color: white;
+  }
+
+     .iosdisabled.switch {
+    background-color: #FF0000;
+    border: 1px solid lightgrey;
+    border-radius: 30px;
+    color: #868686;
+    -webkit-box-shadow: inset rgba(0, 0, 0, 0.1) 0 1px 0;
+    -moz-box-shadow: inset rgba(0, 0, 0, 0.1) 0 1px 0;
+    box-shadow: inset rgba(0, 0, 0, 0.1) 0 1px 0;
+  }
+   .iosdisabled.switch .slide-button {
+    background-color: #FF0000;
+    border-radius: 25px;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+  }
+   .iosdisabled.switch .slide-buttonorginal {
+    background-color: #FF0000;
+    border-radius: 25px;
+    -webkit-transition: all 0.3s ease-out;
+    -moz-transition: all 0.3s ease-out;
+    -o-transition: all 0.3s ease-out;
+    transition: all 0.3s ease-out;
+  }
+  .iosdisabled input:checked + label {
     color: #3a3a3a;
   }
 }
