--- a/CoffeeProject/Coffee/src/main/res/layout/activity_coffee.xml
+++ b/CoffeeProject/Coffee/src/main/res/layout/activity_coffee.xml
@@ -111,15 +111,16 @@
             android:id="@+id/timeLeftLayout"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="gone">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/timeLefttext"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Time left: "
                 android:textColor="#000000"
                 android:textSize="20dp"
@@ -128,6 +129,7 @@
                 android:id="@+id/timeLeftvalue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text=""
                 android:textColor="#FF0000"
                 android:textSize="20dp"/>
@@ -137,14 +139,15 @@
             android:id="@+id/timeElapsedLayout"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="gone">
+            android:visibility="visible">
             <TextView
                 android:id="@+id/timeElapsedtext"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Time elapsed: "
                 android:textColor="#000000"
                 android:textSize="20dp"/>
@@ -152,6 +155,7 @@
                 android:id="@+id/timeElapsedvalue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text=""
                 android:textColor="#FF0000"
                 android:textSize="20dp"/>
