--- a/CoffeeProject/Coffee/src/main/res/layout/activity_coffee2.xml
+++ b/CoffeeProject/Coffee/src/main/res/layout/activity_coffee2.xml
@@ -78,6 +78,26 @@
                 android:textOff="NO"
                 android:textOn="YES"/>
         </LinearLayout>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingTop="6dp">
+
+            <TextView
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="Autoswitch: "
+                android:textSize="16sp"
+                android:layout_gravity="center"/>
+
+            <ToggleButton
+                android:id="@+id/autoSwitchToggle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/statusText"
@@ -89,19 +109,21 @@
             android:layout_gravity="center"
             android:visibility="invisible"
             android:paddingTop="10dp"/>
+
         <LinearLayout
             android:id="@+id/timeLeftLayout"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:visibility="invisible">
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/timeLefttext"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Time left: "
                 android:textColor="#000000"
                 android:textSize="20dp"
@@ -110,25 +132,25 @@
                 android:id="@+id/timeLeftvalue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text=""
                 android:textColor="#FF0000"
                 android:textSize="20dp"/>
-
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/timeElapsedLayout"
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-
-            android:visibility="invisible">
+            android:visibility="visible">
             <TextView
                 android:id="@+id/timeElapsedtext"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text="Time elapsed: "
                 android:textColor="#000000"
                 android:textSize="20dp"/>
@@ -136,6 +158,7 @@
                 android:id="@+id/timeElapsedvalue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:text=""
                 android:textColor="#FF0000"
                 android:textSize="20dp"/>
