The autoswitchsettings can be changed from the app now and when you login, you stay that way. =)

--- a/CoffeeProject/Coffee/src/main/res/xml/pref.xml
+++ b/CoffeeProject/Coffee/src/main/res/xml/pref.xml
@@ -4,7 +4,7 @@
 
 
     <EditTextPreference android:id="@+id/autoswitchSettings" android:title="Autoswitch settings" android:key="autoswitch"
-        android:inputType="text" android:summary="Autoswitch with crontab" android:persistent="true" android:defaultValue="0 18 * * * 1-5"></EditTextPreference>
+        android:inputType="text" android:summary="Autoswitch with crontab" android:persistent="true" android:defaultValue="N/A"></EditTextPreference>
 
 
 </PreferenceScreen>
