--- a/CoffeeProject/Coffee/src/main/res/layout/activity_coffee.xml
+++ b/CoffeeProject/Coffee/src/main/res/layout/activity_coffee.xml
@@ -101,7 +101,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            android:textColor="#FF0000"
+            android:textColor="#000000"
             android:textSize="15dp"
             android:layout_gravity="center"
             android:visibility="gone"
@@ -131,7 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text=""
-                android:textColor="#FF0000"
+                android:textColor="#000000"
                 android:textSize="20dp"/>
         </LinearLayout>
 
@@ -157,7 +157,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text=""
-                android:textColor="#FF0000"
+                android:textColor="#000000"
                 android:textSize="20dp"/>
         </LinearLayout>
 
